--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,17 @@
 @import "generated.scss";
 
+// colors
+$navbar-background: gray;
+
 // common
 
 html {
     font-family: Arial, Helvetica, sans-serif;
+
+    body {
+        margin: 0;
+        padding: 0;
+    }
 }
 
 a,
