--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,11 +2,13 @@
 
 // colors
 $navbar-background: gray;
+$navbar-navlist-background: lightgray;
 
 // common
 
 html {
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.5rem;
 
     body {
         margin: 0;
