--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,6 +1,16 @@
 // navigation
 
 .navbar-wrapper {
+    input {
+        display: none;
+    }
+
+    #btnControl:checked + label + .navlist-wrapper {
+        visibility: visible;
+    }
+}
+
+.navbar-wrapper {
     background-color: $navbar-background;
 
     padding: 10px;
@@ -16,6 +26,7 @@
                 // font-size: 1.5em;
                 // padding-left: 10px;
             }
+
             .navlist-wrapper {
                 top: 20vh;
                 position: absolute;
@@ -25,6 +36,10 @@
                 margin: 0;
                 padding: 0;
                 left: 0;
+
+                &:target {
+                    visibility: visible;
+                }
 
                 .navlist {
                     height: 100%;
