--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,11 @@ $navbar-navlist-background: lightgray;
 
 // common
 
+html,
+body {
+    height: 100%;
+}
+
 html {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.5rem;
