--- a/src/styles/new.scss
+++ b/src/styles/new.scss
@@ -6,8 +6,21 @@ $main-photo-section: "#{$assetPath}kristina_main.jpg";
 .homepage-wrapper {
     .homepage {
         .section-wrapper {
+            .section {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+                color: white;
+            }
+
             .photo-section {
-                background: url($main-photo-section) no-repeat top center;
+                background: linear-gradient(
+                        rgba(0, 0, 0, 0.6),
+                        rgba(0, 0, 0, 0.6)
+                    ),
+                    url($main-photo-section) no-repeat top center;
                 background-size: cover;
                 height: 500px;
             }
