created new misc variable

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,9 @@
 $navbar-background: gray;
 $navbar-navlist-background: lightgray;
 
+// misc variables
+$darken-the-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6));
+
 // common
 
 html,
