changed contacts-section-picture at contacts.scss

--- a/src/styles/contacts.scss
+++ b/src/styles/contacts.scss
@@ -1,4 +1,4 @@
-$contacts-section-picture: "#{$assetPath}kristina_8490463045832235450_n.jpg";
+$contacts-section-picture: "#{$assetPath}kristina.png";
 
 .contacts-wrapper {
     .contacts {
