added languages to Navbar

--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -24,9 +24,19 @@
         align-items: center;
         padding: 0 10px;
         .left {
-            .burger {
-                // font-size: 1.5em;
-                // padding-left: 10px;
+            // .burger {
+            // font-size: 1.5em;
+            // padding-left: 10px;
+            // }
+            display: flex;
+
+            .languages {
+                display: flex;
+                margin-left: 20px;
+
+                .EN {
+                    margin-right: 5px;
+                }
             }
 
             .navlist-wrapper {
